SNRGY-4276 make method accessible by regular user
